hphp/test/zend/good/tests/lang/bug7515.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(version_compare(zend_version(), "2.0.0-dev", '<')) echo "skip Zend Engine 2 needed\n";
}
