hphp/test/zend/bad/ext/phar/tests/fopen_edgecases2U.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if (version_compare(PHP_VERSION, "6.0.0-dev", "<")) die("skip Unicode support required"); ?>